--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      </header>
 
      <!-- carousel -->
-      <div class="carousel next">
+      <div class="carousel">
         <!-- list item -->
          <div class="list">
             <div class="item">
@@ -139,8 +139,8 @@
           <div class="arrows">
             <button id="prev"><</button>
             <button id="next">></button>
-
           </div>
+          <div class="time"></div>
       </div>
 
     <script src="app.js"></script>
