--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
          <!--thumbnail-->
          <div class="thumbnail">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="images/img1.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -100,7 +100,7 @@
             </div>
 
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="images/img2.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -112,7 +112,7 @@
             </div>
 
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="images/img3.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -124,7 +124,7 @@
             </div>
 
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="images/img4.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
